--- a/HTML/fisrst.html
+++ b/HTML/fisrst.html
@@ -7,7 +7,48 @@
     <title>web_page</title>
 </head>
 <body>
-    hello world
-    <h1>hwllo world</h1>
+   
+    <h1>hello jamkhandi</h1>
+    <img src="./imag1.gif" alt="">
+    <marquee behavior="" direction="right">namste jamkhandi</marquee>
+    <table border="" cellspaing="" cellpadding="" rules="all"   >
+    <tr>
+        <td>Rull_number</td>
+        <td>name</td>
+        <td>marks</td>
+        <td>pass_out</td>
+        <td>branch</td>
+    </tr>
+    <tr>
+        <td>2jg17me004</td>
+        <td>nigappa</td>
+        <td>7.1</td>
+        <td callspan="">2021</td>
+        <td callspan="">mecanical</td>
+    </tr>
+    <tr>
+        <td>2jg17me006</td>
+        <td>praveen</td>
+        <td>7.6</td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>2jg17me007</td>
+        <td>rudrappa</td>
+         <td>9.4</td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+        <td>2jg17me400</td>
+        <td>paras</td>
+        <td>8.0</td>
+        <td></td>
+        <td></td>
+    </tr>
+   
+    
+    </table>
 </body>
 </html>
